Hook up MorphWriter to the Apply button. Update MorphWriter to use FSvBSDirectories and implement Noiras suggestions.

--- a/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
+++ b/FSvBSCustomCloneUtility/Views/CustomMorphView.xaml
@@ -48,6 +48,6 @@
         </StackPanel>
 
         <!-- Apply -->
-        <Button Grid.Row="1" x:Name="ApplyButton" IsEnabled="{Binding IsValid}" Margin="0,10,0,0" Content="Apply" Width="100" />
+        <Button Grid.Row="1" x:Name="Apply" IsEnabled="{Binding IsValid}" Margin="0,10,0,0" Content="Apply" Width="100" />
     </Grid>
 </UserControl>
