--- a/FSvBSCustomCloneUtility/Views/ConditionalsControlView.xaml
+++ b/FSvBSCustomCloneUtility/Views/ConditionalsControlView.xaml
@@ -7,34 +7,36 @@
              xmlns:local="clr-namespace:FSvBSCustomCloneUtility.Views"
              mc:Ignorable="d">
 
-    <Grid Margin="{adonisUi:Space}">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
-            <RowDefinition Height="auto" />
+            <RowDefinition Height="10" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="2*" />
             <ColumnDefinition Width="20" />
-            <ColumnDefinition Width="1*" />
+            <ColumnDefinition Width="3*" />
         </Grid.ColumnDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.ColumnSpan="3" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" Margin="0,10">
-            APPEARANCE
-        </TextBlock>
-
-        <TextBlock TextWrapping="Wrap" Grid.Row="1" Grid.ColumnSpan="3">
-            This controls what appearance Shepard will have. You can toggle between the default or customized appearances.
-        </TextBlock>
+        <StackPanel Grid.RowSpan="3" Grid.Column="0">
+            <TextBlock TextWrapping="Wrap" FontSize="18" FontWeight="Bold">
+                APPEARANCE
+            </TextBlock>
+            <TextBlock TextWrapping="Wrap">
+                This controls what appearance Shepard will have. You can toggle between the default or customized appearances.
+            </TextBlock>
+        </StackPanel>
 
         <!-- Male toggle -->
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10" Grid.Row="2" Grid.Column="0">
-            <TextBlock Text="Male" Margin="12,0,10,0" VerticalAlignment="Center"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2">
+            <TextBlock Text="Male" Margin="0,0,10,0" VerticalAlignment="Center"/>
             <Button x:Name="SetMaleDefault" Width="125" 
                     Background="{Binding MaleDefaultColor}"
                     IsEnabled="{Binding IsTargetSet}"
                     Content="Default"/>
             <Button x:Name="SetMaleCustom" Width="125"
+                    VerticalAlignment="Top"
                     Background="{Binding MaleCustomColor}" 
                     IsEnabled="{Binding IsTargetSet}"
                     Content="Custom"
@@ -42,8 +44,8 @@
         </StackPanel>
 
         <!-- Female toggle -->
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10" Grid.Row="2" Grid.Column="2">
-            <TextBlock Text="Female" Margin="12,0,10,0" VerticalAlignment="Center"/>
+        <StackPanel VerticalAlignment="Top" Orientation="Horizontal" Grid.Row="2" Grid.Column="2">
+            <TextBlock Text="Female" Margin="0,0,10,0" VerticalAlignment="Center"/>
             <Button x:Name="SetFemaleDefault" Width="125" 
                     Background="{Binding FemaleDefaultColor}"
                     IsEnabled="{Binding IsTargetSet}"
