--- a/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
+++ b/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
@@ -11,17 +11,17 @@
         xmlns:viewmodels="clr-namespace:FSvBSCustomCloneUtility.ViewModels"
         d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
         mc:Ignorable="d"
-        Title="FemShep v BroShep Utility Tool" Height="520" Width="720"
+        Title="FemShep v BroShep Utility Tool"
         WindowStartupLocation="CenterScreen"
-        MinWidth="720"
-        MinHeight="520">
+        ResizeMode="NoResize"
+        Width="720"
+        Height="550">
     <Window.Style>
         <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}"/>
     </Window.Style>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100" />
-            <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
@@ -46,34 +46,38 @@
             <Image Grid.Column="1" Source="../images/logo.png" Width="400" Margin="{adonisUi:Space}"/>
         </Grid>
 
-        <TextBlock Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center" FontSize="14" FontWeight="Bold" Margin="0,20,0,0">
-                STEPS
-        </TextBlock>
+        <Grid Grid.Row="1" Grid.Column="1" Margin="10,20,10,10">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="10"/>
+                <RowDefinition Height="auto"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="20"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
 
-        <!-- Game Target -->
-        <StackPanel Grid.Row="2" Grid.Column="1" Margin="{adonisUi:Space}">
-            <TextBlock TextWrapping="Wrap">
-                1. Select the target game. The FemShep v BroShep mod must be installed before using this tool.
-            </TextBlock>
-            <Grid Margin="0, 10, 0, 5" >
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="20" />
-                    <ColumnDefinition Width="1*" />
-                </Grid.ColumnDefinitions>
+            <StackPanel Grid.Row="0" Grid.Column="0">
+                <TextBlock TextWrapping="Wrap" FontSize="18" FontWeight="Bold">SET GAME TARGET</TextBlock>
+                <TextBlock TextWrapping="Wrap">Select the game for which to apply the changes.</TextBlock>
+            </StackPanel>
 
-                <Button x:Name="TargetME3" HorizontalAlignment="Center" Width="200" Grid.Column="0"
+            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2">
+                <Button x:Name="TargetME3" HorizontalAlignment="Center" Margin="0,0,5,0" Width="180" 
                         Background="{Binding ME3ButtonColor}"
                         Content="ME3"/>
-                <Button x:Name="TargetLE3" HorizontalAlignment="Center" Width="200" Grid.Column="2"
+                <Button x:Name="TargetLE3" HorizontalAlignment="Center" Margin="5,0,0,0" Width="180"
                         Background="{Binding LE3ButtonColor}" 
                         Content="LE3"
                 />
-            </Grid>
-        </StackPanel>
+                
+            </StackPanel>
 
-        <ContentControl Grid.Row="3" Grid.Column="1" x:Name="CustomMorph" />
+            <TextBox Text="{Binding TargetPath, Mode=OneWay}" IsReadOnly="True" Grid.Row="2" Grid.ColumnSpan="3"/>
+        </Grid>
 
-        <ContentControl Grid.Row="4" Grid.Column="1" x:Name="ConditionalsControl" />
+        <ContentControl Margin="10,20,10,10" Grid.Row="2" Grid.Column="1" x:Name="ConditionalsControl" />
+        <ContentControl Margin="10,20,10,10" Grid.Row="3" Grid.Column="1" x:Name="CustomMorph" />
     </Grid>
 </Window>
