--- a/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
+++ b/FSvBSCustomCloneUtility/Views/MainWindowView.xaml
@@ -13,9 +13,8 @@
         mc:Ignorable="d"
         Title="FemShep v BroShep Utility Tool"
         WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize"
-        Width="720"
-        Height="550">
+        Width="720" Height="550"
+        MinWidth="720" MinHeight="550">
     <Window.Style>
         <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}"/>
     </Window.Style>
@@ -49,32 +48,39 @@
         <Grid Grid.Row="1" Grid.Column="1" Margin="10,20,10,10">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
-                <RowDefinition Height="10"/>
+                <RowDefinition Height="15"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="20"/>
-                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Row="0" Grid.Column="0">
-                <TextBlock TextWrapping="Wrap" FontSize="18" FontWeight="Bold">SET GAME TARGET</TextBlock>
-                <TextBlock TextWrapping="Wrap">Select the game for which to apply the changes.</TextBlock>
+                <TextBlock TextWrapping="Wrap" FontSize="18" FontWeight="Bold">GAME TARGET</TextBlock>
+                <TextBlock TextWrapping="Wrap">Select the game to apply changes to.</TextBlock>
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2">
-                <Button x:Name="TargetME3" HorizontalAlignment="Center" Margin="0,0,5,0" Width="180" 
-                        Background="{Binding ME3ButtonColor}"
-                        Content="ME3"/>
-                <Button x:Name="TargetLE3" HorizontalAlignment="Center" Margin="5,0,0,0" Width="180"
-                        Background="{Binding LE3ButtonColor}" 
-                        Content="LE3"
-                />
-                
-            </StackPanel>
+            <Rectangle VerticalAlignment="Stretch" Fill="Gray" Width="1" Grid.Row="0" Grid.Column="1"/>
 
-            <TextBox Text="{Binding TargetPath, Mode=OneWay}" IsReadOnly="True" Grid.Row="2" Grid.ColumnSpan="3"/>
+            <Grid Grid.Row="0" Grid.Column="2" Margin="20,0" VerticalAlignment="Center">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+
+                <RadioButton x:Name="TargetME3" Content="Mass Effect 3" GroupName="Target"
+                             ToolTip="Set Mass Effect 3 as the target"
+                             HorizontalAlignment="Center" Grid.Column="0"/>
+                <RadioButton x:Name="TargetLE3" Content="Mass Effect 3 LE" GroupName="Target"
+                             ToolTip="Set Mass Effect 3 LE as the target"
+                             HorizontalAlignment="Center" Grid.Column="1"/>
+            </Grid>
+
+            <TextBox Text="{Binding SelectedTargetPath, Mode=OneWay}" IsReadOnly="True"
+                     ToolTip="Selected target game path"
+                     Grid.Row="2" Grid.ColumnSpan="3"/>
         </Grid>
 
         <ContentControl Margin="10,20,10,10" Grid.Row="2" Grid.Column="1" x:Name="ConditionalsControl" />
