--- a/FSvBSCustomCloneUtility/Views/ErrorDialogueView.xaml
+++ b/FSvBSCustomCloneUtility/Views/ErrorDialogueView.xaml
@@ -4,11 +4,15 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FSvBSCustomCloneUtility.Controls"
+        xmlns:adonisUi="clr-namespace:AdonisUI;assembly=AdonisUI"
         mc:Ignorable="d"
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen"
         Title="{Binding Title}" Height="450" Width="800">
-    <Grid>
+    <Window.Style>
+        <Style TargetType="Window" BasedOn="{StaticResource {x:Type Window}}"/>
+    </Window.Style>
+    <Grid Margin="{adonisUi:Space}">
         <Grid.RowDefinitions>
             <RowDefinition Height="20"/>
             <RowDefinition Height="auto"/>
@@ -20,6 +24,11 @@
 
         <TextBlock x:Name="Header" Grid.Row="1"/>
         <TextBlock x:Name="Footer" Grid.Row="2"/>
+        <ScrollViewer Grid.Row="3" Height="auto">
+            <ListBox x:Name="Errors">
+                
+            </ListBox>
+        </ScrollViewer>
         <Button x:Name="Close" HorizontalAlignment="Right" Grid.Row="4" Width="100" Content="OK"/>
     </Grid>
 </Window>
